v54: For some reason on mobile.When the user tabs on a button and then releases the release is not putting the button back to its original state.It still looks like it's being tapped on the static.Noise in the background of the button stops correctly, but

--- a/style.css
+++ b/style.css
@@ -272,8 +272,8 @@ footer {
     isolation: isolate; /* Create a new stacking context */
 }
 
-.menu button.hover-active:not(:disabled),
-.menu button:hover:not(:disabled) {
+.menu button:hover:not(:disabled),
+.menu button.button-active:not(:disabled) {
     background-color: #ccc;
     color: #000;
     box-shadow: 0 0 10px #ccc;
